# gnotify

gnotify/: .cvsignore  .tm_project.cache  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  gnotify.gladep  gnotify.prj  gnotify.pws
gnotify/autom4te.cache/: output.0  traces.0
gnotify/data/: Makefile.am  Makefile.in  gnotify.schemas
gnotify/include/: Makefile.am  Makefile.in  base64.h  gnotify-backend.h  gnotify-frontend.h
gnotify/src/: Makefile.am  Makefile.in  base64.c  gnotify-backend-dbus.c  gnotify-backend-gconf.c  gnotify-backend-gst.c  gnotify-backend-logdog.c  gnotify-frontend-gtk.c  gnotify-frontend-theme-parser.c  gnotify-startup.c
