## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gnotify_datadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/@PACKAGE@

gnotify_data_DATA = \
	gnotify.schemas

EXTRA_DIST = $(gnotify_data_DATA)
