## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gnotify_includedir = $(pkgincludedir)

gnotify_include_DATA = \
	gnotify-backend.h\
	gnotify-frontend.h\
	base64.h

EXTRA_DIST = $(gnotify_include_DATA)
